# CarHelper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.claude/skills/device-app/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  bluetooth.py  config.py  device_store.py  features.py  logconfig.py  main.py  obd_session.py  rules.py  schema.py  simulate.py  trips_repo.py  writer.py
app/static/: index.html
schema/: summary.schema.json
sync/: __init__.py  client.py  state.py  transport.py
tests/: test_logconfig.py  test_schema.py  test_sync.py  test_trips_repo.py  test_writer.py
tools/: query.py
