[project]
name = "carhelper"
version = "0.1.0"
description = "Offline, read-only OBD-II telemetry capture + rule evaluation. Artifacts are read later by Claude Code."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "obd>=0.7.2",
    "pyserial>=3.5",
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Kept out of the runtime deps so the in-car device stays minimal and fully
# offline. Install with `pip install -e '.[dev]'` for validation + tests + lint.
dev = [
    "jsonschema>=4.20",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

